project/gql/grammar/GraphQueryLanguageParser.py
# Generated from ./project/gql/grammar/GraphQueryLanguage.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GraphQueryLanguageParser ( Parser ):

    grammarFileName = "GraphQueryLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'TRUE'", "'FALSE'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\"'", "'\"\"\"'", "':'", "'=>'", "'->'" ]

    symbolicNames = [ "<INVALID>", "FUN", "LOAD", "SET", "ADD", "OF", "TO", 
                      "VERTICES", "LABELS", "SELECT", "EDGES", "REACHABLE", 
                      "START", "FINAL", "FROM", "FILTER", "MAP", "PRINT", 
                      "BOOL", "TRUE", "FALSE", "ASSIGN", "AND", "OR", "NOT", 
                      "IN", "KLEENE", "DOT", "COMMA", "SEMICOLON", "LCB", 
                      "RCB", "LP", "RP", "QUOT", "TRIPLE_QUOT", "COLON", 
                      "DOUBLE_ARROW", "ARROW", "VAR", "INT", "CFG", "STRING", 
                      "PATH", "ID_CHAR", "CHAR", "NONZERO_DIGIT", "DIGIT", 
                      "WS", "EOL" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_expr = 2
    RULE_graph = 3
    RULE_load_graph = 4
    RULE_set_start = 5
    RULE_set_final = 6
    RULE_add_start = 7
    RULE_add_final = 8
    RULE_vertices = 9
    RULE_vertex = 10
    RULE_edges = 11
    RULE_edge = 12
    RULE_labels = 13
    RULE_label = 14
    RULE_anfunc = 15
    RULE_mapping = 16
    RULE_filtering = 17
    RULE_select_edges = 18
    RULE_select_labels = 19
    RULE_select_reachable = 20
    RULE_select_final = 21
    RULE_select_start = 22
    RULE_select_vertices = 23
    RULE_vertices_range = 24
    RULE_cfg = 25
    RULE_string = 26
    RULE_path = 27
    RULE_vertices_set = 28
    RULE_labels_set = 29
    RULE_edges_set = 30
    RULE_var = 31
    RULE_var_edge = 32
    RULE_variables = 33
    RULE_val = 34
    RULE_boolean = 35

    ruleNames =  [ "prog", "stmt", "expr", "graph", "load_graph", "set_start", 
                   "set_final", "add_start", "add_final", "vertices", "vertex", 
                   "edges", "edge", "labels", "label", "anfunc", "mapping", 
                   "filtering", "select_edges", "select_labels", "select_reachable", 
                   "select_final", "select_start", "select_vertices", "vertices_range", 
                   "cfg", "string", "path", "vertices_set", "labels_set", 
                   "edges_set", "var", "var_edge", "variables", "val", "boolean" ]

    EOF = Token.EOF
    FUN=1
    LOAD=2
    SET=3
    ADD=4
    OF=5
    TO=6
    VERTICES=7
    LABELS=8
    SELECT=9
    EDGES=10
    REACHABLE=11
    START=12
    FINAL=13
    FROM=14
    FILTER=15
    MAP=16
    PRINT=17
    BOOL=18
    TRUE=19
    FALSE=20
    ASSIGN=21
    AND=22
    OR=23
    NOT=24
    IN=25
    KLEENE=26
    DOT=27
    COMMA=28
    SEMICOLON=29
    LCB=30
    RCB=31
    LP=32
    RP=33
    QUOT=34
    TRIPLE_QUOT=35
    COLON=36
    DOUBLE_ARROW=37
    ARROW=38
    VAR=39
    INT=40
    CFG=41
    STRING=42
    PATH=43
    ID_CHAR=44
    CHAR=45
    NONZERO_DIGIT=46
    DIGIT=47
    WS=48
    EOL=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GraphQueryLanguageParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQueryLanguageParser.StmtContext)
            else:
                return self.getTypedRuleContext(GraphQueryLanguageParser.StmtContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(GraphQueryLanguageParser.SEMICOLON)
            else:
                return self.getToken(GraphQueryLanguageParser.SEMICOLON, i)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(GraphQueryLanguageParser.EOL)
            else:
                return self.getToken(GraphQueryLanguageParser.EOL, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(GraphQueryLanguageParser.WS)
            else:
                return self.getToken(GraphQueryLanguageParser.WS, i)

        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = GraphQueryLanguageParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphQueryLanguageParser.EOL:
                    self.state = 72
                    self.match(GraphQueryLanguageParser.EOL)


                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphQueryLanguageParser.WS:
                    self.state = 75
                    self.match(GraphQueryLanguageParser.WS)


                self.state = 78
                self.stmt()
                self.state = 79
                self.match(GraphQueryLanguageParser.SEMICOLON)
                self.state = 81
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 80
                    self.match(GraphQueryLanguageParser.EOL)


                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GraphQueryLanguageParser.PRINT) | (1 << GraphQueryLanguageParser.VAR) | (1 << GraphQueryLanguageParser.WS) | (1 << GraphQueryLanguageParser.EOL))) != 0)):
                    break

            self.state = 87
            self.match(GraphQueryLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(GraphQueryLanguageParser.PRINT, 0)

        def expr(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.ExprContext,0)


        def var(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.VarContext,0)


        def ASSIGN(self):
            return self.getToken(GraphQueryLanguageParser.ASSIGN, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(GraphQueryLanguageParser.WS)
            else:
                return self.getToken(GraphQueryLanguageParser.WS, i)

        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = GraphQueryLanguageParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQueryLanguageParser.PRINT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(GraphQueryLanguageParser.PRINT)
                self.state = 90
                self.expr(0)
                pass
            elif token in [GraphQueryLanguageParser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.var()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphQueryLanguageParser.WS:
                    self.state = 92
                    self.match(GraphQueryLanguageParser.WS)


                self.state = 95
                self.match(GraphQueryLanguageParser.ASSIGN)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphQueryLanguageParser.WS:
                    self.state = 96
                    self.match(GraphQueryLanguageParser.WS)


                self.state = 99
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(GraphQueryLanguageParser.LP, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQueryLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(GraphQueryLanguageParser.ExprContext,i)


        def RP(self):
            return self.getToken(GraphQueryLanguageParser.RP, 0)

        def anfunc(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.AnfuncContext,0)


        def mapping(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.MappingContext,0)


        def filtering(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.FilteringContext,0)


        def var(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.VarContext,0)


        def val(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.ValContext,0)


        def NOT(self):
            return self.getToken(GraphQueryLanguageParser.NOT, 0)

        def IN(self):
            return self.getToken(GraphQueryLanguageParser.IN, 0)

        def AND(self):
            return self.getToken(GraphQueryLanguageParser.AND, 0)

        def DOT(self):
            return self.getToken(GraphQueryLanguageParser.DOT, 0)

        def OR(self):
            return self.getToken(GraphQueryLanguageParser.OR, 0)

        def KLEENE(self):
            return self.getToken(GraphQueryLanguageParser.KLEENE, 0)

        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GraphQueryLanguageParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 104
                self.match(GraphQueryLanguageParser.LP)
                self.state = 105
                self.expr(0)
                self.state = 106
                self.match(GraphQueryLanguageParser.RP)
                pass

            elif la_ == 2:
                self.state = 108
                self.anfunc()
                pass

            elif la_ == 3:
                self.state = 109
                self.mapping()
                pass

            elif la_ == 4:
                self.state = 110
                self.filtering()
                pass

            elif la_ == 5:
                self.state = 111
                self.var()
                pass

            elif la_ == 6:
                self.state = 112
                self.val()
                pass

            elif la_ == 7:
                self.state = 113
                self.match(GraphQueryLanguageParser.NOT)
                self.state = 114
                self.expr(6)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 131
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = GraphQueryLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 117
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 118
                        self.match(GraphQueryLanguageParser.IN)
                        self.state = 119
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = GraphQueryLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 120
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 121
                        self.match(GraphQueryLanguageParser.AND)
                        self.state = 122
                        self.expr(5)
                        pass

                    elif la_ == 3:
                        localctx = GraphQueryLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 123
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 124
                        self.match(GraphQueryLanguageParser.DOT)
                        self.state = 125
                        self.expr(4)
                        pass

                    elif la_ == 4:
                        localctx = GraphQueryLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 126
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 127
                        self.match(GraphQueryLanguageParser.OR)
                        self.state = 128
                        self.expr(3)
                        pass

                    elif la_ == 5:
                        localctx = GraphQueryLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 129
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 130
                        self.match(GraphQueryLanguageParser.KLEENE)
                        pass

             
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class GraphContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def load_graph(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.Load_graphContext,0)


        def cfg(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.CfgContext,0)


        def string(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.StringContext,0)


        def set_start(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.Set_startContext,0)


        def set_final(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.Set_finalContext,0)


        def add_start(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.Add_startContext,0)


        def add_final(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.Add_finalContext,0)


        def LP(self):
            return self.getToken(GraphQueryLanguageParser.LP, 0)

        def graph(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.GraphContext,0)


        def RP(self):
            return self.getToken(GraphQueryLanguageParser.RP, 0)

        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)




    def graph(self):

        localctx = GraphQueryLanguageParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_graph)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.load_graph()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.cfg()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.string()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.set_start()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.set_final()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.add_start()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.add_final()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 143
                self.match(GraphQueryLanguageParser.LP)
                self.state = 144
                self.graph()
                self.state = 145
                self.match(GraphQueryLanguageParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Load_graphContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOAD(self):
            return self.getToken(GraphQueryLanguageParser.LOAD, 0)

        def path(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.PathContext,0)


        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_load_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoad_graph" ):
                listener.enterLoad_graph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoad_graph" ):
                listener.exitLoad_graph(self)




    def load_graph(self):

        localctx = GraphQueryLanguageParser.Load_graphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_load_graph)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(GraphQueryLanguageParser.LOAD)
            self.state = 150
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Set_startContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET(self):
            return self.getToken(GraphQueryLanguageParser.SET, 0)

        def START(self):
            return self.getToken(GraphQueryLanguageParser.START, 0)

        def OF(self):
            return self.getToken(GraphQueryLanguageParser.OF, 0)

        def TO(self):
            return self.getToken(GraphQueryLanguageParser.TO, 0)

        def graph(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.GraphContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQueryLanguageParser.VarContext)
            else:
                return self.getTypedRuleContext(GraphQueryLanguageParser.VarContext,i)


        def vertices(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.VerticesContext,0)


        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_set_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_start" ):
                listener.enterSet_start(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_start" ):
                listener.exitSet_start(self)




    def set_start(self):

        localctx = GraphQueryLanguageParser.Set_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_set_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(GraphQueryLanguageParser.SET)
            self.state = 153
            self.match(GraphQueryLanguageParser.START)
            self.state = 154
            self.match(GraphQueryLanguageParser.OF)
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQueryLanguageParser.LOAD, GraphQueryLanguageParser.SET, GraphQueryLanguageParser.ADD, GraphQueryLanguageParser.LP, GraphQueryLanguageParser.CFG, GraphQueryLanguageParser.STRING]:
                self.state = 155
                self.graph()
                pass
            elif token in [GraphQueryLanguageParser.VAR]:
                self.state = 156
                self.var()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 159
            self.match(GraphQueryLanguageParser.TO)
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQueryLanguageParser.SELECT, GraphQueryLanguageParser.LCB, GraphQueryLanguageParser.LP, GraphQueryLanguageParser.INT]:
                self.state = 160
                self.vertices()
                pass
            elif token in [GraphQueryLanguageParser.VAR]:
                self.state = 161
                self.var()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Set_finalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET(self):
            return self.getToken(GraphQueryLanguageParser.SET, 0)

        def FINAL(self):
            return self.getToken(GraphQueryLanguageParser.FINAL, 0)

        def OF(self):
            return self.getToken(GraphQueryLanguageParser.OF, 0)

        def TO(self):
            return self.getToken(GraphQueryLanguageParser.TO, 0)

        def graph(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.GraphContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQueryLanguageParser.VarContext)
            else:
                return self.getTypedRuleContext(GraphQueryLanguageParser.VarContext,i)


        def vertices(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.VerticesContext,0)


        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_set_final

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_final" ):
                listener.enterSet_final(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_final" ):
                listener.exitSet_final(self)




    def set_final(self):

        localctx = GraphQueryLanguageParser.Set_finalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_set_final)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(GraphQueryLanguageParser.SET)
            self.state = 165
            self.match(GraphQueryLanguageParser.FINAL)
            self.state = 166
            self.match(GraphQueryLanguageParser.OF)
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQueryLanguageParser.LOAD, GraphQueryLanguageParser.SET, GraphQueryLanguageParser.ADD, GraphQueryLanguageParser.LP, GraphQueryLanguageParser.CFG, GraphQueryLanguageParser.STRING]:
                self.state = 167
                self.graph()
                pass
            elif token in [GraphQueryLanguageParser.VAR]:
                self.state = 168
                self.var()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 171
            self.match(GraphQueryLanguageParser.TO)
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQueryLanguageParser.SELECT, GraphQueryLanguageParser.LCB, GraphQueryLanguageParser.LP, GraphQueryLanguageParser.INT]:
                self.state = 172
                self.vertices()
                pass
            elif token in [GraphQueryLanguageParser.VAR]:
                self.state = 173
                self.var()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Add_startContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(GraphQueryLanguageParser.ADD, 0)

        def START(self):
            return self.getToken(GraphQueryLanguageParser.START, 0)

        def OF(self):
            return self.getToken(GraphQueryLanguageParser.OF, 0)

        def TO(self):
            return self.getToken(GraphQueryLanguageParser.TO, 0)

        def graph(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.GraphContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphQueryLanguageParser.VarContext)
            else:
                return self.getTypedRuleContext(GraphQueryLanguageParser.VarContext,i)


        def vertices(self):
            return self.getTypedRuleContext(GraphQueryLanguageParser.VerticesContext,0)


        def getRuleIndex(self):
            return GraphQueryLanguageParser.RULE_add_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_start" ):
                listener.enterAdd_start(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_start" ):
                listener.exitAdd_start(self)




    def add_start(self):

        localctx = GraphQueryLanguageParser.Add_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_add_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(GraphQueryLanguageParser.ADD)
            self.state = 177
            self.match(GraphQueryLanguageParser.START)
            self.state = 178
            self.match(GraphQueryLanguageParser.OF)
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQueryLanguageParser.LOAD, GraphQueryLanguageParser.SET, GraphQueryLanguageParser.ADD, GraphQueryLanguageParser.LP, GraphQueryLanguageParser.CFG, GraphQueryLanguageParser.STRING]:
                self.state = 179
                self.graph()
                pass
            elif token in [GraphQueryLanguageParser.VAR]:
                self.state = 180
                self.var()
                pass
            else:
                raise NoViableAltException(self)
